--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 		<meta name="viewport" content="initial-scale=1">
 		<link href='//fonts.googleapis.com/css?family=Gentium+Book+Basic' rel='stylesheet' type='text/css'>
   	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="">
-		<link rel="stylesheet" href="">
-		<script src=""></script>
+		<script src="js/script.js"></script>
 	</head>
 	<body>
-		<header>
-		</header>
-		<section>
-			<h1>MDS</h1>
-		</section>
+		<h1>Quiz on Important Facts</h1>
+		<div class="quiz-container">
+  		<div id="quiz"></div>
+		</div>
+		<button id="previous">Previous Question</button>
+		<button id="next">Next Question</button>
+		<button id="submit">Submit Quiz</button>
+		<div id="results"></div>
 		<footer></footer>
 	</body>
 </html>
