--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 		<meta charset="UTF-8">
 		<title>Plan and control</title>
 		<meta name="viewport" content="initial-scale=1">
-		<link href='//fonts.googleapis.com/css?family=Gentium+Book+Basic' rel='stylesheet' type='text/css'>
   	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="">
-		<script src="js/script.js"></script>
+		<link rel="stylesheet" href="css/style.css" />
+
 	</head>
 	<body>
 		<h1>Quiz on Important Facts</h1>
@@ -20,5 +18,6 @@
 		<button id="submit">Submit Quiz</button>
 		<div id="results"></div>
 		<footer></footer>
+		<script src="js/script.js"></script>
 	</body>
 </html>
