Spike demo with presentation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 	</head>
 	<body>
-		<h1>Quiz on Important Facts</h1>
+		<h1>Agile Planning and Controlling Presentation</h1>
+		<div class="presentation-container">
+			<div id="ok"></div>
+		</div>
+		<h2>Quiz on Agile Planning and Controlling</h1>
 		<div class="quiz-container">
   		<div id="quiz"></div>
 		</div>
