US-13-logica inicial

--- a/index.html
+++ b/index.html
@@ -12,50 +12,50 @@
     <title>ISEC - MDS 2017/18!</title>
   </head>
   <body>
-	<div class="main-view">
-		<h1 class="project-title">Scrum Projects</h1>
-		<p class="project-description">Agile Planning and Controlling</p>
+		<div class="main-view">
+			<h1 class="project-title">Scrum Projects</h1>
+			<p class="project-description">Agile Planning and Controlling</p>
 
-		<input maxlength="25" id="inputUsername" class="input1" type="text" placeholder="Insert your name..."/>
+			<input maxlength="25" id="inputUsername" class="input1" type="text" placeholder="Insert your name..."/>
 
-		<div class="container">
-			<a href="#" class="pretty-button" style="padding-left: 30px; padding-right: 30px;"><span class="glyphicon glyphicon-stats" style="padding: 0px; font-size: 20px;"></span></a>
-			<a href="#" id="enterBtn" onclick="checkUse()"class="pretty-button">TAKE OUR QUIZ</a>
-		</div>
-	</div>
-
-	<footer>
-		<div class="footer">
-			<hr>
-			<div class="row" style="padding: 20px; font-size: 12px; margin-top: -10px; ">
-				<div class="footer-header" style="font-size: 16px; margin-bottom: 10px;">
-					MDS 2017/2018 - ISEC: Assignment #3
-				</div>
-				<div class="col-md-4" style="padding-left: 80px;">
-					Gonçalo </br>
-					Inês </br>
-					Luís </br>
-					Maria
-				</div>
-				<div class="col-md-4">
-					Maria Inês </br>
-					Pedro Reis, a21230140@alunos.isec.pt</br>
-					Rui Abreu
-				</div>
-				<div class="col-md-4 text-center">
-					<img src="http://dfm.isec.pt/imagens/logos/isec.jpg" alt="Logo ISEC" style="height: 80px;">
-				</div>
+			<div class="container">
+				<a href="#" class="pretty-button" style="padding-left: 30px; padding-right: 30px;"><span class="glyphicon glyphicon-stats" style="padding: 0px; font-size: 20px;"></span></a>
+				<a href="#" id="enterBtn" onclick="checkUser()"class="pretty-button">TAKE OUR QUIZ</a>
 			</div>
 		</div>
-	</footer>
+
+		<footer>
+			<div class="footer">
+				<hr>
+				<div class="row" style="padding: 20px; font-size: 12px; margin-top: -10px; ">
+					<div class="footer-header" style="font-size: 16px; margin-bottom: 10px;">
+						MDS 2017/2018 - ISEC: Assignment #3
+					</div>
+					<div class="col-md-4" style="padding-left: 80px;">
+						Gonçalo </br>
+						Inês </br>
+						Luís </br>
+						Maria
+					</div>
+					<div class="col-md-4">
+						Maria Inês </br>
+						Pedro Reis, a21230140@alunos.isec.pt</br>
+						Rui Abreu
+					</div>
+					<div class="col-md-4 text-center">
+						<img src="http://dfm.isec.pt/imagens/logos/isec.jpg" alt="Logo ISEC" style="height: 80px;">
+					</div>
+				</div>
+			</div>
+		</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="js/script.js"></script>
   </body>
 </html>
