TS-14 Change ok id to content id

--- a/template.html
+++ b/template.html
@@ -26,7 +26,7 @@
 		<div class="row" style="margin-left: 60px;">
 			<div class="col-md-6 card-3">
 				<div class="presentation-container">
-					<div id="ok"></div>
+					<div id="contents"></div>
 				</div>
 			</div>
 			<div class="col-md-6 card-3">
