US-13 update initial logic with contents scripts

--- a/template.html
+++ b/template.html
@@ -72,6 +72,26 @@
    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 	 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="js/contents/content-1.js"></script>
+		<script src="js/contents/content-2.js"></script>
+		<script src="js/contents/content-3.js"></script>
+		<script src="js/contents/content-4.js"></script>
+		<script src="js/contents/content-5.js"></script>
+		<script src="js/contents/content-6.js"></script>
+		<script src="js/contents/content-7.js"></script>
+		<script src="js/contents/content-8.js"></script>
+		<script src="js/contents/content-9.js"></script>
+		<script src="js/contents/content-10.js"></script>
+		<script src="js/contents/content-11.js"></script>
+		<script src="js/contents/content-12.js"></script>
+		<script src="js/contents/content-13.js"></script>
+		<script src="js/contents/content-14.js"></script>
+		<script src="js/contents/content-15.js"></script>
+		<script src="js/contents/content-16.js"></script>
+		<script src="js/contents/content-17.js"></script>
+		<script src="js/contents/content-18.js"></script>
+		<script src="js/contents/content-19.js"></script>
+		<script src="js/contents/content-20.js"></script>
 		<script src="js/script.js"></script>
  	</body>
 </html>
